# Membranes_and_Distillation

./: .gitignore  Main.py  README.md
Commom_Equations_DC/: Calculations_DC_2FEEDS_Aspen.py  Calculations_DC_Aspen.py  Calculations_DC_Column_Sizing.py  Calculations_DC_Costs.py  Calculations_DC_HEs.py  (+2 more)
HFM/HFM_Chu_FDM_OO_project/: README.md  pyproject.toml
HFM/HFM_Chu_FDM_OO_project/hfm_simulator/: __init__.py  results.py  simulator.py  stream.py
HFM/HFM_Chu_FDM_OO_project/hfm_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
HFM/HFM_Chu_FDM_OO_project/hfm_simulator/energy_model/: energy_module.py  energy_postprocess.py  energy_solver.py  thermo_model.py  thermo_model_no_mix_enth.py
HFM/HFM_Chu_FDM_OO_project/hfm_simulator/mass_model/: geometry.py  module_dp.py  module_nodp.py  report_mass.py  solver.py
HFM/HFM_Chu_FDM_OO_project/run_examples/: test_simulation.py  test_two_membranes_series.py
HFM/HFM_Chu_FDM_OO_project/run_examples/scenarios_examples/: scenarios.py
HFM/Libs_to_Install/HFM_Chu_V0.2.0/: README.md  project_map.txt  pyproject.toml
HFM/Libs_to_Install/HFM_Chu_V0.2.0/hfm_simulator/: simulator.py  stream.py
HFM/Libs_to_Install/HFM_Chu_V0.2.0/hfm_simulator/energy_model/: energy_module.py  thermo_model_no_mix_enth.py
HFM/Libs_to_Install/HFM_Chu_V0.2.0/hfm_simulator/mass_model/: module_base.py  solver.py
HFM/Libs_to_Install/HFM_Chu_V0.2.0/run_examples/: energy_results.xlsx  energy_results_new.xlsx  test_simulation.py
HFM/Libs_to_Install/HFM_Chu_V0.2.0/run_examples/properties_examples/: Mixture_Properties.py
(+144 files in other folders)
