[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hfm-simulator"
version = "0.1.0"
description = "Hollow Fiber Membrane Simulator"
authors = [
    { name="Oliva D.G." }
]
dependencies = [
    "numpy",
    "scipy",
    "openpyxl",
    "CoolProp"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hfm_simulator*"]